{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 18,
  "lineage": "3c9b524a-e55f-343c-6e93-f46c7f598429",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "civm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-063d4ab14480ac177",
            "arn": "arn:aws:ec2:eu-west-1:581590935060:instance/i-0bc5bd95a41ef95b7",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bc5bd95a41ef95b7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pf6-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06af8aaa2f311b212",
            "private_dns": "ip-172-16-2-171.eu-west-1.compute.internal",
            "private_ip": "172.16.2.171",
            "public_ip": "34.241.192.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01d07e2d8ce7d290b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f63f96af4c53304",
            "tags": {
              "Name": "CI SERVER"
            },
            "tags_all": {
              "Name": "CI SERVER"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c696cffe738bc383"
            ]
          },
          "dependencies": [
            "aws_security_group.civm_sec_group",
            "aws_subnet.civm_subnet",
            "aws_vpc.civm_vpc",
            "data.aws_ami.linux_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "civm_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:581590935060:internet-gateway/igw-02047a0793f844597",
            "id": "igw-02047a0793f844597",
            "owner_id": "581590935060",
            "vpc_id": "vpc-0c44db695579b38f2"
          },
          "dependencies": [
            "aws_vpc.civm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02047a0793f844597",
            "id": "r-rtb-08454b86a128026a51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08454b86a128026a5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.civm_igw",
            "aws_vpc.civm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "civm_sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:581590935060:security-group/sg-0c696cffe738bc383",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c696cffe738bc383",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "CI server security group",
            "name_prefix": "",
            "owner_id": "581590935060",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c44db695579b38f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.civm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "civm_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:581590935060:subnet/subnet-00f63f96af4c53304",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.16.2.0/24",
            "id": "subnet-00f63f96af4c53304",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "581590935060",
            "vpc_id": "vpc-0c44db695579b38f2"
          },
          "dependencies": [
            "aws_vpc.civm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "civm_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:581590935060:vpc/vpc-0c44db695579b38f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-06b3ccf4309cef3fe",
            "default_route_table_id": "rtb-08454b86a128026a5",
            "default_security_group_id": "sg-07dd96dd612185bb2",
            "dhcp_options_id": "dopt-87322ee1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c44db695579b38f2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08454b86a128026a5",
            "owner_id": "581590935060"
          }
        }
      ]
    }
  ]
}